--- a/src/index.html
+++ b/src/index.html
@@ -1,48 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Learning HTML</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
 
-    <p>
-      Go checkout my
-      <a href="https://github.com/Exitum03/Coursera-WebDev">Github!</a>
-    </p>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="keywords" content="HTML">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <hr />
+  <title>Learning HTML</title>
+</head>
 
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus id
-      voluptatem, cupiditate tempore rerum soluta dolores, autem consectetur
-      quos numquam molestias minus veniam hic praesentium ab totam dolore
-      voluptatibus ullam. Lorem ipsum dolor, sit amet consectetur adipisicing
-      elit. Natus id Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Natus id voluptatem, cupiditate tempore rerum soluta dolores, autem
-      consectetur quos numquam molestias minus veniam hic praesentium ab totam
-      dolore voluptatibus ullam. voluptatem, cupiditate tempore rerum soluta
-      dolores, autem consectetur quos numquam molestias minus veniam hic
-      praesentium ab totam dolore voluptatibus ullam. Lorem ipsum dolor, sit
-      amet consectetur adipisicing elit. Natus id Lorem ipsum dolor, sit amet
-      consectetur adipisicing elit. Natus id voluptatem, cupiditate tempore
-      rerum soluta dolores, autem consectetur quos numquam molestias minus
-      veniam hic praesentium ab totam dolore voluptatibus ullam. voluptatem,
-      cupiditate tempore rerum soluta dolores, autem consectetur quos numquam
-      molestias minus veniam hic praesentium ab totam dolore voluptatibus ullam.
-    </p>
+<body>
+  <h1>Hello World!</h1>
 
-    <h1>Image test</h1>
-    <hr />
+  <p>
+    Go checkout my
+    <a href="https://github.com/Exitum03/Coursera-WebDev">Github!</a>
+  </p>
 
-    <img
-      src="../src/imgs/portrait.jpg"
-      alt="portrait"
-      width="500"
-      height="500"
-    />
-  </body>
+  <hr>
+
+  <p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus id
+    voluptatem, cupiditate tempore rerum soluta dolores, autem consectetur
+    quos numquam molestias minus veniam hic praesentium ab totam dolore
+    voluptatibus ullam. Lorem ipsum dolor, sit amet consectetur adipisicing
+    elit. Natus id Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    Natus id voluptatem, cupiditate tempore rerum soluta dolores, autem
+    consectetur quos numquam molestias minus veniam hic praesentium ab totam
+    dolore voluptatibus ullam. voluptatem, cupiditate tempore rerum soluta
+    dolores, autem consectetur quos numquam molestias minus veniam hic
+    praesentium ab totam dolore voluptatibus ullam. Lorem ipsum dolor, sit
+    amet consectetur adipisicing elit. Natus id Lorem ipsum dolor, sit amet
+    consectetur adipisicing elit. Natus id voluptatem, cupiditate tempore
+    rerum soluta dolores, autem consectetur quos numquam molestias minus
+    veniam hic praesentium ab totam dolore voluptatibus ullam. voluptatem,
+    cupiditate tempore rerum soluta dolores, autem consectetur quos numquam
+    molestias minus veniam hic praesentium ab totam dolore voluptatibus ullam.
+  </p>
+
+  <h1>Image test</h1>
+  <hr>
+
+  <img src="../src/imgs/portrait.jpg" alt="portrait" width="500" height="500" />
+  <p>
+    *** BLOCK ELEMENT ***
+    <span>### Inline ###</span>
+  </p>
+
+  <section>
+    COVID-19
+    <article>Article 1</article>
+    <article>Article 2</article>
+    <article>Article 3</article>
+  </section>
+
+  <section>
+    GAMING
+    <article>Article 1</article>
+    <article>Article 2</article>
+    <article>Article 3</article>
+  </section>
+
+  <footer>This is a footer Copyright 2021</footer>
+
+  <p><strong>Laptop Specs!</strong></p>
+  <ul>
+    <li>CPU: Ryzen 7</li>
+    <li>Mother Board: IDK</li>
+    <li>RAM: 1x 16gb Kingston</li>
+    <li>GPU: Gtx 1660ti mobile</li>
+    <li>Screen: 1920x1080 120hz</li>
+  </ul>
+
+  <p><strong>To do list:</strong></p>
+  <ol>
+    <li>Finish Coursera Webdev week 1 &amp; 2</li>
+    <li>Finish Coursera Wevdev week 3 &amp; 4</li>
+    <li>Finish Coursera Unreal Course Week 1 &amp; 2</li>
+    <li>Finish Coursera Unreal Course Week 3 &amp; 5</li>
+  </ol>
+</body>
+
 </html>
