--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="keywords" content="HTML">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Learning HTML</title>
+  <meta charset="UTF-8">
 </head>
 
 <body>
-  <h1>Hello World!</h1>
+  <h1>When the Imposter is SUS</h1>
+  <ul>
+    <li><a href="./about.html">About</a></li>
+  </ul>
 
   <p>
     Go checkout my
@@ -39,24 +38,27 @@
     molestias minus veniam hic praesentium ab totam dolore voluptatibus ullam.
   </p>
 
-  <h1>Image test</h1>
+  <h1>AMOGUS</h1>
   <hr>
 
-  <img src="../src/imgs/portrait.jpg" alt="portrait" width="500" height="500" />
+  <img src="./imgs/AmogusMain.jpg" alt="AMOGUS" width="800" height="500">
+  <div><a href="./imgs/AmogusMain.jpg" download>Download</a></div>
   <p>
     *** BLOCK ELEMENT ***
     <span>### Inline ###</span>
   </p>
 
+  <hr>
   <section>
-    COVID-19
+    <h4>COVID-19</h4>
     <article>Article 1</article>
     <article>Article 2</article>
     <article>Article 3</article>
   </section>
 
+  <hr>
   <section>
-    GAMING
+    <h4>Gaming</h4>
     <article>Article 1</article>
     <article>Article 2</article>
     <article>Article 3</article>
@@ -64,7 +66,7 @@
 
   <footer>This is a footer Copyright 2021</footer>
 
-  <p><strong>Laptop Specs!</strong></p>
+  <h4>Laptop Specs</h4>
   <ul>
     <li>CPU: Ryzen 7</li>
     <li>Mother Board: IDK</li>
@@ -73,13 +75,28 @@
     <li>Screen: 1920x1080 120hz</li>
   </ul>
 
-  <p><strong>To do list:</strong></p>
   <ol>
-    <li>Finish Coursera Webdev week 1 &amp; 2</li>
-    <li>Finish Coursera Wevdev week 3 &amp; 4</li>
-    <li>Finish Coursera Unreal Course Week 1 &amp; 2</li>
-    <li>Finish Coursera Unreal Course Week 3 &amp; 5</li>
+    <li>Open box</li>
+    <li>Take out cookie</li>
+    <!-- Nested list -->
+    <li>Make a Double Oreo
+      <ol>
+        <li>Peel off the top part</li>
+        <li>Place anohter cookie in the middle</li>
+        <li>Put back the top part</li>
+      </ol>
+    </li>
+    <li>Enjoy!</li>
   </ol>
+
+  <h2>HTML Entities</h2>
+  <p>&lt;p&gt; This is a p tag! &lt;/p&gt;</p>
+
+  <h3>std::cout &lt;&lt; &quot; Hello world! &quot;</h3>
+
+  <hr>
+  <p><strong>Link Download Test</strong></p>
+  <a href="./imgs/portrait.jpg" download>Download</a>
 </body>
 
 </html>
